working on fixing layout problems

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -66,13 +66,14 @@ div.menubar div {
 }
 
 div.poweredbox {
-    float:right;
-    position:relative;
+    float:left;
+    position:absolute
     white-space:nowrap;
-    right:0%;
-    bottom:0;
+    left:0%;
+    top:90%;
     width:30%;
     text-align:center;
+    display:none;
 }
 
 div.poweredbox table {
@@ -120,6 +121,9 @@ div.debug {
     padding:1px;
 }
 
+div.history {
+    float:right;
+}
 
 div.history h2 {
     padding:0.25em;
@@ -138,7 +142,13 @@ div.quiz-elem {
     margin-bottom:1em;
     border: 4px solid #caecae;
     float:left;
-    width:95%;
+}
+
+div.quiz {
+    width:45%;
+    position:absolute;
+    left:0;
+    top:45%;
 }
 
 div.quiz-elem h2 {
@@ -172,8 +182,19 @@ div.test {
     min-width:30%;
 }
 
+div.stats {
+    display:none;
+    position:absolute;
+    left:0;
+    top:70%;
+}
+
 div.stats table {
     float:left;width:80%;
+}
+
+div#controls {
+    width:45%;
 }
 
 div#controls input.submit {
@@ -268,19 +289,14 @@ div.optiongroup h4 {
 }
 
 div.history {
-    width:75%;
-    float:left;
+    width:45%;
+    position:absolute;
+    right:0;
 }
 
 div.history table {
     width:95%;
     float:left;
-}
-
-
-div.stats {
-    float:right;
-    width:10%;
 }
 
 table.matrix td {
